Allow users to select output folder from source sets
Before this change we would only list a single output resource
folder per flavor. Since each flavor may have multiple resource
folders associated allow the user to select the exact output
folder.

Also attempt to select the output folder where the action was
initiated as the default output folder.

Fixes: 170406189
Test: N/A. The tests for this area seem to be missing.
Change-Id: I3f71adb59460a4d115228779d425518f94c2c335

GitOrigin-RevId: bb49682d08c887983fdf17330eb48b89ce6905cb